# burn-vision

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: rust.yml
crates/pyburn-vision/: Cargo.toml  README.md  pyproject.toml
crates/pyburn-vision/.github/workflows/: CI.yml
crates/pyburn-vision/docs/: interface_description.md
crates/pyburn-vision/src/: googlenet.rs  lib.rs  models.rs
crates/pyburn-vision/src/layers/: activations.rs  mod.rs
docs/: README.md
examples/: model.py
examples/alex/: Cargo.toml
examples/alex/src/: main.rs
examples/googlenet/: Cargo.toml
examples/googlenet/src/: main.rs
examples/py_Files/: convert_to_pt.py  mod_create.sh  model.py  model_install.sh
src/: activations.rs  alexnet.rs  densenet121.rs  efficientnet_b0.rs  googlenet.rs  inceptionv3.rs  lib.rs  regnet_x_16gf.rs  swin_transformer.rs
src/pyFiles/: download.py
