[package]
name = "burnvision"
version = "0.1.0"
authors = ["KwachOjunga ojungakwach@gmail.com"]
edition = "2024"
repository = "https://github.com/KwachOjunga/burn-vision"
keywords = ["science", "machine-learning"]

[badges]
maintenance = { status = "actively-developed" }

[workspace]
resolver = "3"
members = [
    "examples/alex",
    "crates/*",
    "examples/googlenet"
]

[dependencies]
burn = { version = "0.18.0", features = ["train", "wgpu", "ndarray", "tui"] }
