[package]
name = "pyburn-vision"
version = "0.1.0"
edition = "2024"
authors = ["ojungakwach@gmail.com"]
repository = "https://github.com/KwachOjunga/burn-vision"
keywords = ["science", "machine-learning"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pyburn_vision"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.1", features = ["extension-module"] }

[dependencies.burnvision]
path = "../../"
